--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -30,6 +30,7 @@
 	"Houseboat": "Hausboot",
 	"GuestBoat": "Gast-Boot",
 	"Boat": "Dauerlieger-Boot",
+	"boat": "Boot",
 	"easter": "Ostern",
 	"pentecost": "Pfingsten",
 	"chrismas": "Weihnachten",
