--- a/lang/de.json
+++ b/lang/de.json
@@ -59,5 +59,6 @@
 	"renter": "Mieter",
 	"guest": "Caravans",
 	"customer": "Boote",
-	"Germany": "Deutschland"
+	"Germany": "Deutschland",
+	"Remove file": "Datei löschen"
 }
