customer, boat dates

--- a/lang/de.json
+++ b/lang/de.json
@@ -64,5 +64,7 @@
 	"customer": "Kunde",
 	"customer-demo": "Demo-Kunde",
 	"Germany": "Deutschland",
-	"Remove file": "Datei löschen"
+	"Remove file": "Datei löschen",
+	"summer": "Sommer",
+	"winter": "Winterlager"
 }
